data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1567.wast
;; 8. **Test 8**: A loop that breaks using a `br_if` condition where the correct execution requires consuming specific operands. Incorrect operand consumption leads to infinite looping.

(assert_invalid
 (module
  (func $loop-break-br_if
   (loop $loop
    (br_if 0 (i32.const 0) (i32.const 1))
   )
  )
 )
 "type mismatch"
)